# ifood_coupon_analysis

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
data/extracted/: restaurants.csv  restaurants.parquet
notebooks/: 01_data_exploratory.ipynb  02_ab_test_analysis.ipynb  03_segmentations.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploratory-checkpoint.ipynb
src/data/: 01_data_extraction.py  01_data_ingestion.py  02_data_transformation.py  03_extraction.py  data_extraction.py  data_load.py  data_transformation.py
tests/: data_snipped.py  tests.ipynb
tests/.ipynb_checkpoints/: tests-checkpoint.ipynb
